--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -206,7 +206,6 @@ p a:hover{
 .projects{
   position:relative;
   margin-top:7%;
-  background-color:#242424;
 }
 
 .pimageextra{
@@ -403,17 +402,30 @@ p a:hover{
   
 <div class="projects">
   <div class="pimage" id="1">
-  <img class="img-responsive" style="margin:auto; width:80%;" src="images/190401_3017_RymanArtsParentNight_Posters_WELCOME.jpg">
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_WELCOME.jpg">
    <div class="desc">
-<i>Mmm</i> is a mini semi-monthly music magazine that features one influential artist per issue to give full coverage and ensure high quality of content. <i>Mmm</i> goes through an intensive screening process that requires thorough research and extensive knowledge of the Korean music industry before selecting the artists of the month.
+<i>Ryman Arts Parent Appreciation Night</i>, hosted by THG. I designed posters introducing some of the top projects THG has worked on since its establishment.
      <br/><br/>
-As an all-inclusive publication, <i>Mmm</i> features artists from all music genres and statuses. Whether underground or internationally recognized, <i>Mmm</i>'s primary goal is to recognize talents who all share one thing in common: their genuine love for music.
+THG’s orange and Ryman Arts’ blue were the only two colors used, representing the collaboration between the host (THG) and client (Ryman Arts). The main purpose of the event was to excite and ensure parents that a career in the arts can be bright, fulfilling, and most importantly, fun!   
  <div class="arrow">↯</div>
     </div>
-    
-  <img class="img-responsive" style="margin:auto;" src="https://images2.imgbox.com/8c/a4/fIDNrouF_o.jpg">
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_RYMAN.jpg"> 
    <br/><br/> 
-  <img class="img-responsive" style="margin:auto;" src="https://images2.imgbox.com/ea/f3/HAAM4MXJ_o.jpg">
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_MAP.jpg">
+   <br/><br/> 
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_BEYOND AB.jpg">
+   <br/><br/> 
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_ONE WORLD.jpg">
+   <br/><br/> 
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_HIGH ROLLER.jpg">
+   <br/><br/> 
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_DRAGONS.jpg">
+   <br/><br/> 
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_DW WATERPARK.jpg">
+   <br/><br/> 
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_DREAMWORKS.jpg">
+   <br/><br/> 
+  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_VR.jpg">
     
     <div class="desc">
 A sneak peek of the November issue with singer-songwriter IU!
