--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -415,7 +415,7 @@ THG’s orange and Ryman Arts’ blue were the only two colors used, representin
    <br/><br/> 
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_4.jpg">
     
-    </div>
+    div class="desc"> </div>
  
   </div>
   </div>
