--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -415,7 +415,22 @@ THG’s orange and Ryman Arts’ blue were the only two colors used, representin
    <br/><br/> 
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_4.jpg">
     
-    div class="desc"> </div>
+ <div class="desc">
+   When presented, people were attracted to the outer packaging but once they slid the box open, they were confused and appalled by what was inside. Even after I assured everyone everything was safe to eat, the audience was hesitant to taste test. Some brave souls who tried a few pieces said they felt weird for thinking the excrements tasted so good.
+   <br/><br/>
+   As expected, the psychological effects of eating with our eyes first significantly overpowered the sweet taste and even familiar aromas of popular baked goods. 2015.
+    </div>
+    </div>
+  
+  <!--
+  <div class="pimageextra" id="2">
+  
+  </div>
+ 
+ <div class="desc">
+  
+    </div>
+-->
  
   </div>
   </div>
