--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -403,14 +403,23 @@ p a:hover{
 <div class="projects">
   <div class="pimage" id="1">
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_1.jpg">
-   <div class="desc">
-<i>Ryman Arts Parent Appreciation Night</i>, hosted by THG. I designed posters introducing some of the top projects THG has worked on since its establishment.
-     <br/><br/>
-THG’s orange and Ryman Arts’ blue were the only two colors used, representing the collaboration between the host (THG) and client (Ryman Arts). The main purpose of the event was to excite and ensure parents that a career in the arts can be bright, fulfilling, and most importantly, fun!   
+   
+	  <div class="desc">
+<i>Ryman Arts Parent Appreciation Night</i> was a one-night event hosted by The Hettema Group. I designed posters introducing THG's top projects.  
  <div class="arrow">↯</div>
     </div>
+	  
+	  <div class="desc">
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_2.jpg"> 
-   <br/><br/> 
+  THG’s orange and Ryman Arts’ blue were the only two colors used, representing the collaboration between the host (THG) and client (Ryman Arts).
+		  <br/><br/>
+	   As the goal of
+	   the event was to excite and ensure parents that a career in the arts can be bright, fulfilling, and most importantly, fun(!), I chose abstract, free-form 
+	   shapes that created movement within a physically static print poster.
+ <div class="arrow">↯</div>
+	 </div>
+	  
+	  
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_3.jpg">
    <br/><br/> 
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_4.jpg">
