--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -402,6 +402,7 @@ p a:hover{
   
 <div class="projects">
   <div class="pimage" id="1">
+	  
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_1.jpg">
    
 	  <div class="desc">
@@ -409,12 +410,12 @@ p a:hover{
  <div class="arrow">↯</div>
     </div>
 	  
-	  <div class="desc">
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_2.jpg"> 
+	  
+	  <div class="desc">
   THG’s orange and Ryman Arts’ blue were the only two colors used, representing the collaboration between the host (THG) and client (Ryman Arts).
 		  <br/><br/>
-	   As the goal of
-	   the event was to excite and ensure parents that a career in the arts can be bright, fulfilling, and most importantly, fun(!), I chose abstract, free-form 
+	   As the goal of the event was to excite and ensure parents that a career in the arts can be bright, fulfilling, and most importantly, fun(!), I chose abstract, free-form 
 	   shapes that created movement within a physically static print poster.
  <div class="arrow">↯</div>
 	 </div>
@@ -425,10 +426,8 @@ p a:hover{
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_4.jpg">
     
  <div class="desc">
-   When presented, people were attracted to the outer packaging but once they slid the box open, they were confused and appalled by what was inside. Even after I assured everyone everything was safe to eat, the audience was hesitant to taste test. Some brave souls who tried a few pieces said they felt weird for thinking the excrements tasted so good.
-   <br/><br/>
-   As expected, the psychological effects of eating with our eyes first significantly overpowered the sweet taste and even familiar aromas of popular baked goods. 2015.
-    </div>
+    
+	  </div>
     </div>
   
   <!--
