--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -403,7 +403,7 @@ p a:hover{
 <div class="projects">
   <div class="pimage" id="1">
 	  
-   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_logo.png">
+   <img class="img-responsive" style="margin:auto; size:50%;" src="images/201025_rymanartsxthg_mockup_logo.png">
 	  <br/><br/>
    <img class="img-responsive" style="margin:auto;" src="images/201027_rymanartsxthg_mockup_1.jpg">
    
