--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -402,19 +402,16 @@ p a:hover{
   
 <div class="projects">
   <div class="pimage" id="1">
-	<br/><br/>
-	  <br/><br/>
-	  <br/><br/>
-   <img class="img-responsive" style="margin:auto; width:75%;" src="images/201025_rymanartsxthg_mockup_logo.png">
-	  <br/><br/>
-	  <br/><br/>
-	  <br/><br/>
+	  
    <img class="img-responsive" style="margin:auto;" src="images/201027_rymanartsxthg_mockup_1.jpg">
    
 	  <div class="desc">
 <i>Ryman Arts Parent Appreciation Night</i> was a one-night event hosted by The Hettema Group. I designed posters introducing THG's top projects.  
  <div class="arrow">↯</div>
     </div>
+	 
+  <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_logo.png">
+	  <div class="arrow">↯</div>
 	  
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_2.jpg"> 
 	  
