--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -403,15 +403,12 @@ p a:hover{
 <div class="projects">
   <div class="pimage" id="1">
 	  
-   <img class="img-responsive" style="margin:auto;" src="images/201027_rymanartsxthg_mockup_1.jpg">
+   <img class="img-responsive" style="margin:auto;" src="images/201027_rymanartsxthg_mockup_detail_1.jpg.jpg">
    
 	  <div class="desc">
 <i>Ryman Arts Parent Appreciation Night</i> was a one-night event hosted by The Hettema Group. I designed posters introducing THG's top projects.  
  <div class="arrow">↯</div>
     </div>
-	 
-  <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_logo.png">
-	  <div class="arrow">↯</div>
 	  
   <img class="img-responsive" style="margin:auto;" src="images/201025_rymanartsxthg_mockup_2.jpg"> 
 	  
