--- a/index.html
+++ b/index.html
@@ -375,7 +375,10 @@ p a:hover{
     <i><span style="color:#fff; font-family: 'Shrikhand'; font-size:42px; -webkit-text-stroke: 1.25px black;
   text-shadow:-2px 2px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000; padding-left:15px;">notice*</span></i>
     <br/><br/>
-	  <center>under construction; coming soon!</center>
+	  <center>under construction; coming soon!
+		  <br>
+		  for the time being, <a href="https://drive.google.com/file/u/2/d/1h-qW6MtYfbgNuRy14PgXo4CooBYUfBf2/view">here</a> is a snippet of my most recent works. thank you!
+	  </center>
     
 <div class="arrow">↯</div>
     
