--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ p a:hover{
     <br/><br/>
 	  <center>under construction; coming soon!
 		  <br>
-		  for the time being, <a style="background-color:#ff0; text-decoration:none; color:#000;" href="https://jieuuniverse.github.io/work">older projects</a>. thank you!
+		  for the time being, <a style="background-color:#ff0; text-decoration:none; color:#000;" href="https://drive.google.com/file/u/2/d/1h-qW6MtYfbgNuRy14PgXo4CooBYUfBf2/view">here</a> is a snippet of my most recent works, as well as some of my <a style="background-color:#ff0; text-decoration:none; color:#000;" href="https://jieuuniverse.github.io/work">older projects</a>. thank you!
 	  </center>
     
 <div class="arrow">↯</div>
