--- a/work.html
+++ b/work.html
@@ -431,7 +431,7 @@ p a:hover{
 	
 <div class="row">
   <div class="col-md-4">
-	  <a href="/rymanxthg"><img class="img-grid" src="images/ryman.png"></a>
+	  <img class="img-grid style="opacity:0.5;" src="images/ryman.png">
 </div>
 	
 <div class="col-md-4">
